refactor users as permissions
