# src/Esquio.UI.Api.Shared/Models/Permissions/Details/DetailsPermissionRequest.cs
@@ -1,0 +1,10 @@
+﻿using MediatR;
+
+namespace Esquio.UI.Api.Shared.Models.Permissions.Details
+{
+    public class DetailsPermissionRequest
+        : IRequest<DetailsPermissionResponse>
+    {
+        public string SubjectId { get; set; }
+    }
+}
