# src/Esquio.UI.Api.Shared/Models/Users/Delete/DeleteUsersRequestValidator.cs
@@ -1,15 +1,0 @@
-﻿using FluentValidation;
-
-namespace Esquio.UI.Api.Shared.Models.Users.Delete
-{
-    public class DeleteUsersRequestValidator
-         : AbstractValidator<DeleteUsersRequest>
-    {
-        public DeleteUsersRequestValidator()
-        {
-            this.RuleFor(rf => rf.SubjectId)
-                .NotEmpty()
-                .MaximumLength(200);
-        }
-    }
-}
