# src/Esquio.UI.Api.Shared/Models/Users/Details/DetailsUsersRequestValidator.cs
@@ -1,15 +1,0 @@
-﻿using FluentValidation;
-
-namespace Esquio.UI.Api.Shared.Models.Users.Details
-{
-    public class DetailsUsersRequestValidator
-         : AbstractValidator<DetailsUsersRequest>
-    {
-        public DetailsUsersRequestValidator()
-        {
-            this.RuleFor(rf => rf.SubjectId)
-                .NotEmpty()
-                .MaximumLength(200);
-        }
-    }
-}
