# src/Esquio.UI.Api.Shared/Models/Users/List/ListUsersResponseDetail.cs
@@ -1,9 +1,0 @@
-﻿namespace Esquio.UI.Api.Shared.Models.Users.List
-{
-    public class ListUsersResponseDetail
-    {
-        public string SubjectId { get; set; }
-
-        public string ActAs { get; set; }
-    }
-}
