# src/Esquio.UI.Api.Shared/Models/Users/My/MyResponse.cs
@@ -1,19 +1,0 @@
-﻿using System;
-
-namespace Esquio.UI.Api.Shared.Models.Users.My
-{
-    public class MyResponse
-    {
-        public bool IsAuthorized { get; set; }
-
-        public string ActAs { get; set; }
-
-        public static MyResponse UnAuthorized()
-        {
-            return new MyResponse()
-            {
-                IsAuthorized = false
-            };
-        }
-    }
-}
